Implement Sticky Recovery for 100% routing success

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,6 @@
-# Build artifacts
-/target/
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Test outputs
-*.txt
-!theory.md
-
-# Logs
-*.log
+/target
+**/*.log
+**/*.txt
+sim_*.md
+*_result*.md
+sticky_test_output.txt
