feat: Fix Tree Fallback for 100% routing success, add debug/benchmark tools
- Fix DFS visited management in Tree mode (routing.rs)
- Add visited.clear() on Gravity recovery
- Add DFS retry logic when traversal fails unexpectedly
- Add debug_failures.rs for failure analysis
- Add stretch_benchmark.rs for embedding comparison
- Update .gitignore for debug/temp files

Results:
- 100% routing success rate achieved for all tested sizes (100-3000 nodes)
- Stretch optimization remains a challenge (PIE embedding limitation)
- Ready for robustness testing phase

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,13 @@ venv/
 
 # Kiro specs (project management)
 .kiro/
+
+# Debug and build output
+build_result.txt
+experiment_debug.txt
+*_debug.txt
+*_output.txt
+
+# Simulator output (temporary)
+paper_data/sim_*.txt
+paper_data/debug_*.txt
