modified:   .gitignore         new file:   paper_data/real_world/caida_experiment_record.md         new file:   paper_data/real_world/caida_experiment_record_landmark.md         new file:   paper_data/real_world/caida_topology_experiments.json         new file:   paper_data/real_world/caida_topology_experiments_landmark.json         new file:   paper_data/real_world/caida_topology_experiments_landmark_summary.json         new file:   paper_data/real_world/caida_topology_experiments_summary.json         modified:   src/bin/topology_experiments.rs         new file:   src/landmark_routing.rs         modified:   src/lib.rs         modified:   src/routing.rs

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,7 @@ experiment_*.txt
 paper_data/sim_*.txt
 paper_data/debug_*.txt
 
+# External datasets (never commit)
+paper_data/input/
+
 archive/phase6/
