modified:   Cargo.lock         modified:   Cargo.toml         modified:   README.md         modified:   paper_data/churn/churn_robustness.json         new file:   paper_data/churn/dynamic_network_results.json         modified:   paper_data/comprehensive/SUMMARY_REPORT.md         modified:   paper_data/comprehensive/ablation_results.json         modified:   paper_data/comprehensive/latency_results.json         modified:   paper_data/comprehensive/memory_results.json         new file:   paper_data/comprehensive/scalability_ci_report.md         new file:   paper_data/comprehensive/scalability_multiseed.json         modified:   paper_data/comprehensive/scalability_results.json         modified:   paper_data/comprehensive/topology_results.json         new file:   paper_data/real_world/large_topology_results.json         new file:   scripts/show_churn.py         modified:   src/bin/churn_robustness.rs         modified:   src/bin/comprehensive_benchmark.rs         new file:   src/bin/dynamic_network_experiment.rs         new file:   src/bin/large_topology_benchmark.rs         modified:   src/bin/topology_experiments.rs         modified:   src/routing.rs         modified:   src/tz_routing.rs         new file:   topology_experiments.json

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ governor = "0.6"
 nonzero_ext = "0.3"
 dashmap = "5.5"
 crossbeam = "0.8"
+rayon = "1.10"
 opentelemetry = "0.21"
 opentelemetry_sdk = "0.21"
 opentelemetry-stdout = "0.2"
@@ -87,6 +88,14 @@ path = "src/bin/debug_failures.rs"
 [[bin]]
 name = "stretch_benchmark"
 path = "src/bin/stretch_benchmark.rs"
+
+[[bin]]
+name = "large_topology_benchmark"
+path = "src/bin/large_topology_benchmark.rs"
+
+[[bin]]
+name = "dynamic_network_experiment"
+path = "src/bin/dynamic_network_experiment.rs"
 
 [[bench]]
 name = "routing_latency"
